--- a/app/assets/stylesheets/global/global.scss
+++ b/app/assets/stylesheets/global/global.scss
@@ -5,3 +5,12 @@ html {
     -o-background-size: cover;
     background-size: cover;
 }
+
+.center {
+    max-width: 75em;
+    margin: 0 auto;
+}
+
+body {
+    margin: 0;
+}
