--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   </head>
 
   <body class="<%= controller_name %> <%= action_name %>">
+    <%= render "global/header" %>
     <%= yield %>
   </body>
 </html>
