--- a/app/views/global/_header.html.erb
+++ b/app/views/global/_header.html.erb
@@ -1,7 +1,15 @@
 <header>
   <section class="header__container">
-    <div class="center">
-      
+    <div class="center pure-g">
+      <section class="pure-u-1-12 header__logo">
+	<%= image_tag("guild_logo.png", class: "pure-img") %>
+      </section>
+      <section class="pure-u-1-4 header__title">
+	<h1 class="gold"><span class="classy blue">Casual</span>Pwnography</h1>
+      </section>
+      <section class="pure-u-2-3">
+	
+      </section>       
     </div>
   </section>
 </header>
