--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
 	<link rel="stylesheet" href="<%= root_url %>css/grids-responsive-min.css">
     <!--<![endif]-->
     
-
+    <link href="https://fonts.googleapis.com/css?family=Acme|Tangerine:700" rel="stylesheet">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
