Tablet-responsive, working on monile

--- a/app/assets/stylesheets/global/header.scss
+++ b/app/assets/stylesheets/global/header.scss
@@ -38,3 +38,9 @@
 	background-color: $casual-gold;
     }
 }
+
+@media screen and (max-width: 64em) {
+    .header__navbar nav {
+	margin: 0;
+    }
+}
