--- a/app/views/global/_header.html.erb
+++ b/app/views/global/_header.html.erb
@@ -9,13 +9,13 @@
 <header>
   <section class="header__container">
     <div class="center pure-g">
-      <section class="pure-u-1-12 header__logo">
+      <section class="pure-u-sm-1-6 pure-u-lg-1-12 header__logo">
 	<%= image_tag("guild_logo.png", class: "pure-img") %>
       </section>
-      <section class="pure-u-1-4 header__title">
+      <section class="pure-u-sm-1-2 pure-u-lg-1-4 header__title">
 	<h1 class="gold"><span class="classy blue">Casual</span>Pwnography</h1>
       </section>
-      <section class="pure-u-2-3 header__navbar">
+      <section class="pure-u-sm-1 pure-u-lg-2-3 header__navbar">
 	<nav>
 	  <ul>
 	    <li><%= link_to "Sign In", "#", class: "pure-button" %></li>
