--- a/app/views/global/_header.html.erb
+++ b/app/views/global/_header.html.erb
@@ -9,15 +9,21 @@
 <header>
   <section class="header__container">
     <div class="center pure-g">
-      <section class="pure-u-sm-1-6 pure-u-lg-1-12 header__logo">
+      <section class="pure-u-1-4 pure-u-sm-1-6 pure-u-lg-1-12 header__logo">
 	<%= image_tag("guild_logo.png", class: "pure-img") %>
       </section>
-      <section class="pure-u-sm-1-2 pure-u-lg-1-4 header__title">
-	<h1 class="gold"><span class="classy blue">Casual</span>Pwnography</h1>
+      <section class="pure-u-3-4 pure-u-sm-1-2 pure-u-lg-1-4 header__title">
+	<div class="desktop-title">
+	  <h1 class="gold"><span class="classy blue">Casual</span>Pwnography</h1>
+	</div>
+	<div class="mobile-title">
+	  <h1 class="blue"><span class="classy">Casual</span></h1>
+	  <h1 class="gold">Pwnography</h1>
+	</div>
       </section>
-      <section class="pure-u-sm-1 pure-u-lg-2-3 header__navbar">
-	<nav>
-	  <ul>
+      <section class="pure-u-1 pure-u-lg-2-3 header__navbar">
+	<nav class="desktop-nav">
+	  <ul class="menu">
 	    <li><%= link_to "Sign In", "#", class: "pure-button" %></li>
 	    <% header_links.reverse.each do |array| %>
 	      <li><%= link_to array[0], array[1], class: "gold" %></li>
