--- a/app/views/global/_header.html.erb
+++ b/app/views/global/_header.html.erb
@@ -8,6 +8,9 @@
 
 <header>
   <section class="header__container">
+    <div class="menu-btn">
+      <i class="fa fa-bars fa-2x"></i>
+    </div>
     <div class="center pure-g">
       <section class="pure-u-1-4 pure-u-sm-1-6 pure-u-lg-1-12 header__logo">
 	<%= image_tag("guild_logo.png", class: "pure-img") %>
