Add placeholder banner

--- a/app/views/global/_header.html.erb
+++ b/app/views/global/_header.html.erb
@@ -17,7 +17,7 @@
       </section>
       <section class="pure-u-3-4 pure-u-sm-1-2 pure-u-lg-1-4 header__title">
 	<div class="desktop-title">
-	  <h1 class="gold"><span class="classy blue">Casual</span>Pwnography</h1>
+	  <h1 class="gold pwn-font"><span class="classy blue">Casual</span>Pwnography</h1>
 	</div>
 	<div class="mobile-title">
 	  <h1 class="blue"><span class="classy">Casual</span></h1>
