--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
 
   <body class="<%= controller_name %> <%= action_name %>">
     <%= render "global/header" %>
+    <%= render "global/announcements" %>
     <%= yield %>
   </body>
 </html>
