--- a/app/assets/stylesheets/global/global.scss
+++ b/app/assets/stylesheets/global/global.scss
@@ -20,7 +20,7 @@ body {
     margin: 0;
 }
 
-h1 span.classy {
+.classy {
     font-family: "Tangerine", cursive;
     font-size: 2em;
 }
@@ -33,8 +33,11 @@ h1 span.classy {
     color: $casual-gold;
 }
 
-h1 {
+.pwn-font {
     font-family: "Acme", sans-serif;
+}
+
+h1 {
     font-size: 2.25em;
     margin: 0.25em 0;
 }
