--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,17 @@
   <body class="<%= controller_name %> <%= action_name %>">
     <%= render "global/header" %>
     <%= render "global/announcements" %>
-    <%= yield %>
+    <section class="yield-wrapper">
+      <div class="center pure-g">
+	<div class="pure-u-3-4">
+	  <%= yield %>
+	</div>
+	<div class="pure-u-1-4">
+	  <aside>
+	    Hello
+	  </aside>
+	</div>
+      </div>
+    </section>
   </body>
 </html>
