--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,7 @@
 	  <%= yield %>
 	</div>
 	<div class="pure-u-1-4">
-	  <aside>
-	    Hello
-	  </aside>
+	  <%= render "global/aside" %>
 	</div>
       </div>
     </section>
