Add Resources placeholder

--- a/app/views/global/_aside.html.erb
+++ b/app/views/global/_aside.html.erb
@@ -1,4 +1,11 @@
 <section class="aside">
+
+  <section class="aside__section resources__container">
+    <h3 class="blue">Resources</h3>
+    <hr>
+    <p style="text-align: center">Nothing here for now...</p>
+  </section>
+  
   <section class="aside__section discord__container">
     <h3 class="blue">Who's Online?</h3>
     <hr>
