Add more placeholder data

--- a/app/views/global/_aside.html.erb
+++ b/app/views/global/_aside.html.erb
@@ -11,4 +11,39 @@
     <hr>
     <iframe src="https://discordapp.com/widget?id=328738686650810369&theme=dark" allowtransparency="true" frameborder="0"></iframe>
   </section>
+  <section class="aside__section events__container">
+    <h3 class="blue">Upcoming Events</h3>
+    <hr>
+    <p style="text-align: center;padding-bottom: 1em;">
+      Nothing here for now...
+    </p>
+  </section>
+  <section class="aside__section twitch__container">
+    <h3 class="blue">Guildies Streaming</h3>
+    <hr>
+    <p style="text-align: center;padding-bottom: 1em;">
+      Nothing here for now...
+    </p>
+  </section>
+  <section class="aside__section guild-progress__container">
+    <h3 class="blue">Guild Goals</h3>
+    <hr>
+    <p style="text-align: center;padding-bottom: 1em;">
+      Nothing here for now...
+    </p>
+  </section>
+  <section class="aside__section personal-progress__container">
+    <h3 class="blue">Personal Progress</h3>
+    <hr>
+    <p style="text-align: center;padding-bottom: 1em;">
+      Nothing here for now...
+    </p>
+  </section>
+  <section class="aside__section donation__container">
+    <h3 class="blue">Help keep the Guild site running! (Donations)</h3>
+    <hr>
+    <p style="text-align: center;padding-bottom: 1em;">
+      Nothing here for now...
+    </p>
+  </section>
 </div>
