add background color to content

--- a/app/assets/stylesheets/global/global.scss
+++ b/app/assets/stylesheets/global/global.scss
@@ -41,3 +41,7 @@ h1 {
     font-size: 2.25em;
     margin: 0.25em 0;
 }
+
+.display-left-container {
+    background-color: rgba(167, 148, 121, 0.8);
+}
