--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <%= render "global/announcements" %>
     <section class="yield-wrapper">
       <div class="center pure-g">
-	<div class="pure-u-3-4">
+	<div class="pure-u-3-4 display-left-container">
 	  <%= yield %>
 	</div>
 	<div class="pure-u-1-4">
