--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,8 @@
   <body class="<%= controller_name %> <%= action_name %>">
     <%= render "global/header" %>
     <%= render "global/announcements" %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <section class="yield-wrapper">
       <div class="center pure-g">
 	<div class="pure-u-3-4 display-left-container">
