--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -15,3 +15,22 @@
 // For example, to change the default status-tag color:
 //
 //   .status_tag { background: #6090DB; }
+
+
+#header {
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#195584+0,003456+100 */
+    background: rgb(25,85,132); /* Old browsers */
+    background: -moz-linear-gradient(top, rgba(25,85,132,1) 0%, rgba(0,52,86,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(25,85,132,1) 0%,rgba(0,52,86,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(25,85,132,1) 0%,rgba(0,52,86,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#195584', endColorstr='#003456',GradientType=0 ); /* IE6-9 */
+}
+
+#header ul.tabs > li.current > a,
+#header ul.tabs > li:hover > a {
+    background: #a79479;
+}
+
+#title_bar.title_bar h2 {
+    color: #a79479;
+}
