--- a/app/assets/stylesheets/global/header.scss
+++ b/app/assets/stylesheets/global/header.scss
@@ -14,11 +14,35 @@
     background-color: rgba(0,0,0,0.75);
 }
 
+.sign-in-container {
+	position: absolute;
+	background-color: lighten(#a79479, 20%);
+	bottom: -20em;
+	right: 0;
+	padding: 1em;
+	box-sizing: border-box;
+	width: 20em;
+	height: 20em;
+	border-radius: 1em;
+	border: 0.125em solid #195584;
+
+	h2 {
+		color: #195584;
+	}
+
+	input[type='submit'] {
+		margin-top: 1em;
+		background-color: #195584;
+		color: white;
+	}
+}
+
 .header__logo img {
     margin: 0.25em 0;
 }
 
 .header__navbar {
+    position: relative;
 
     nav {
 	margin-top: 1.75em;
@@ -48,6 +72,7 @@
 
     li a.pure-button:hover {
 	background-color: $casual-gold;
+	color: white;
     }
 }
 
