--- a/app/views/global/_header.html.erb
+++ b/app/views/global/_header.html.erb
@@ -25,22 +25,33 @@
 	</div>
       </section>
       <section class="pure-u-1 pure-u-lg-2-3 header__navbar">
-	<nav class="desktop-nav">
-	  <ul class="menu">
-	    <li><%= link_to "Sign In", "#", class: "pure-button" %></li>
-	    <% header_links.reverse.each do |array| %>
-	      <li><%= link_to array[0], array[1], class: "gold" %></li>
-	    <% end %>
-	  </ul>
-	</nav>
-	<nav class="mobile-nav">
-	  <ul class="menu">
-	    <li><%= link_to "Sign In", "#", class: "pure-button" %></li>
-	    <% header_links.reverse.each do |array| %>
-	      <li><%= link_to array[0], array[1], class: "gold" %></li>
-	    <% end %>
-	  </ul>
-	</nav>
+		<nav class="desktop-nav">
+		  <ul class="menu">
+		    <li><%= link_to "Sign In", "#", class: "pure-button signin-button" %></li>
+		    <% header_links.reverse.each do |array| %>
+		      <li><%= link_to array[0], array[1], class: "gold" %></li>
+		    <% end %>
+		  </ul>
+		</nav>
+		<nav class="mobile-nav">
+		  <ul class="menu">
+		    <li><%= link_to "Sign In", "#", class: "pure-button" %></li>
+		    <% header_links.reverse.each do |array| %>
+		      <li><%= link_to array[0], array[1], class: "gold" %></li>
+		    <% end %>
+		  </ul>
+		</nav>
+
+		<div class="sign-in-container" style="display:none;">
+			<h2 class="pwn-font">Login</h2>
+			<%= form_tag("/login", method: :post, class: "pure-form pure-form-stacked") do %>
+				<%= label_tag('username', "Username", class: 'pwn-font') %>
+				<%= text_field_tag('username') %>
+				<%= label_tag('password', "Password", class: 'pwn-font') %>
+				<%= password_field_tag('password') %>
+				<%= submit_tag("Login", class: "pure-button") %>
+			<% end %>
+		</div>
       </section>       
     </div>
   </section>
