--- a/app/views/global/_header.html.erb
+++ b/app/views/global/_header.html.erb
@@ -27,7 +27,11 @@
       <section class="pure-u-1 pure-u-lg-2-3 header__navbar">
 		<nav class="desktop-nav">
 		  <ul class="menu">
-		    <li><%= link_to "Sign In", "#", class: "pure-button signin-button" %></li>
+
+		  	<% sign_in_text = "Sign In" %>
+		  	<% sign_in_text = "Account" if logged_in? %>
+
+		    <li><%= link_to sign_in_text, "#", class: "pure-button signin-button" %></li>
 		    <% header_links.reverse.each do |array| %>
 		      <li><%= link_to array[0], array[1], class: "gold" %></li>
 		    <% end %>
@@ -43,13 +47,20 @@
 		</nav>
 
 		<div class="sign-in-container" style="display:none;">
-			<h2 class="pwn-font">Login</h2>
-			<%= form_tag("/login", method: :post, class: "pure-form pure-form-stacked") do %>
-				<%= label_tag('username', "Username", class: 'pwn-font') %>
-				<%= text_field_tag('username') %>
-				<%= label_tag('password', "Password", class: 'pwn-font') %>
-				<%= password_field_tag('password') %>
-				<%= submit_tag("Login", class: "pure-button") %>
+			<% if logged_in? %>
+				<h2 class="pwn-font">My Account</h2>
+				<%= link_to "Poopy", "#", class: 'pure-button' %>
+				<%= link_to "Caca", "#", class: 'pure-button' %>
+				<%= link_to "Log Out", logout_path, method: :delete, class: 'pure-button' %>
+			<% else %>
+				<h2 class="pwn-font">Login</h2>
+				<%= form_tag("/login", method: :post, class: "pure-form pure-form-stacked") do %>
+					<%= label_tag('username', "Username", class: 'pwn-font') %>
+					<%= text_field_tag('username') %>
+					<%= label_tag('password', "Password", class: 'pwn-font') %>
+					<%= password_field_tag('password') %>
+					<%= submit_tag("Login", class: "pure-button") %>
+				<% end %>
 			<% end %>
 		</div>
       </section>       
