Add Account options

--- a/app/assets/stylesheets/global/header.scss
+++ b/app/assets/stylesheets/global/header.scss
@@ -30,7 +30,7 @@
 		color: #195584;
 	}
 
-	input[type='submit'] {
+	.pure-button {
 		margin-top: 1em;
 		background-color: #195584;
 		color: white;
