Add conditional post checking

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,6 +4,13 @@
 	<%= link_to "New Post!", posts_path, class: 'pure-button' %>
 <% end %>
 <hr>
+
+<% if Post.all.empty? %>
+	
+<% else %>
+
+<% end %>
+
 <article>
   <h2 style="text-align: center" class="blue">Example Guild Post #1!</h2>
   <div style="background-color: white;height: 500px;width: 500px;margin: 0 auto"></div>
@@ -11,4 +18,5 @@
   
 
   <p>Eleifend id, placerat quisquam enim morbi massa risus neque, ut ipsum praesent purus, non nec tempus, voluptas mattis amet. Id pharetra massa ac, quis molestie lectus malesuada. Vivamus id sed amet ad consectetuer, mi provident eros. Augue nibh felis fringilla at aliquam voluptatem. Eu urna ligula, cursus vel a donec, laboriosam nisl, nulla consequat, elit ut ac. Libero nullam dictum eget tempor ipsum in, praesent massa, taciti donec vivamus dictum vel eu aliquet, justo dictum mollis congue at cursus in. Fermentum et ac etiam ultrices aliquet condimentum, sapien aliquam a nullam, in ultricies est ipsum integer est, nec amet in, tempus nullam pede eros mattis. Mi consequat arcu ac blandit placerat. Dui ullamcorper tincidunt turpis, nisl conubia, curabitur in, pulvinar adipiscing suspendisse ante tempus taciti metus. Quis ut a ut condimentum, felis id ac facilisi vitae, ante a enim mi amet dui, morbi placerat repellendus.</p>
+
 </article>
