Replace temp text

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,17 +6,12 @@
 <hr>
 
 <% if Post.all.empty? %>
-	
+	<article>
+	  <h2 style="text-align: center" class="blue">Hm, nothing here</h2>
+	  <p style="text-align: center">
+	  	Looks like no one has had the chance to post anything yet.
+	  </p>
+	</article>	
 <% else %>
-
+	
 <% end %>
-
-<article>
-  <h2 style="text-align: center" class="blue">Example Guild Post #1!</h2>
-  <div style="background-color: white;height: 500px;width: 500px;margin: 0 auto"></div>
-  <p>This is some example text. Lorem from now on:  Lorem ipsum dolor sit amet, vitae nonummy mauris duis sit vitae vel, nibh aliquip bibendum ornare. Vel ipsam nisi suspendisse proin ultrices, odio felis, odio molestias, in phasellus, vestibulum libero velit sem nulla ipsum. Suscipit varius, sem maecenas amet magna mi sollicitudin, sapien nibh nunc, risus nullam vitae vestibulum, ut cursus turpis magna felis risus aliquip. Risus ut, interdum pede pharetra eu pede suspendisse. Lorem necessitatibus velit consequat, nibh parturient ut faucibus sapien.</p>
-  
-
-  <p>Eleifend id, placerat quisquam enim morbi massa risus neque, ut ipsum praesent purus, non nec tempus, voluptas mattis amet. Id pharetra massa ac, quis molestie lectus malesuada. Vivamus id sed amet ad consectetuer, mi provident eros. Augue nibh felis fringilla at aliquam voluptatem. Eu urna ligula, cursus vel a donec, laboriosam nisl, nulla consequat, elit ut ac. Libero nullam dictum eget tempor ipsum in, praesent massa, taciti donec vivamus dictum vel eu aliquet, justo dictum mollis congue at cursus in. Fermentum et ac etiam ultrices aliquet condimentum, sapien aliquam a nullam, in ultricies est ipsum integer est, nec amet in, tempus nullam pede eros mattis. Mi consequat arcu ac blandit placerat. Dui ullamcorper tincidunt turpis, nisl conubia, curabitur in, pulvinar adipiscing suspendisse ante tempus taciti metus. Quis ut a ut condimentum, felis id ac facilisi vitae, ante a enim mi amet dui, morbi placerat repellendus.</p>
-
-</article>
