--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
 
 <% if Post.all.empty? %>
 	<article>
-	  <h2 style="text-align: center" class="blue">Hm, nothing here</h2>
+	  <h2 style="text-align: center" class="blue pwn-font">Hm, nothing here</h2>
 	  <p style="text-align: center">
 	  	Looks like no one has had the chance to post anything yet.
 	  </p>
