Add Guild only to form

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,7 @@
-<h1>Posts#new</h1>
-<p>Find me in app/views/posts/new.html.erb</p>
-
 <%= form_for(@post) do |f| %>
 	Title: <%= f.text_field :title %>
 	Content: <br>
 	<%= f.text_area :content %>
+	Guild Only: <%= f.check_box(:guild_only) %>
 	<%= f.submit "SUBMIT!" %>
 <% end %>
