--- a/app/assets/stylesheets/global/header.scss
+++ b/app/assets/stylesheets/global/header.scss
@@ -14,6 +14,11 @@
     background-color: rgba(0,0,0,0.75);
 }
 
+.desktop-title a,
+.mobile-title a {
+	text-decoration: none;
+}
+
 .sign-in-container {
 	position: absolute;
 	background-color: lighten(#a79479, 20%);
