--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,5 +13,14 @@
 	  </p>
 	</article>	
 <% else %>
-	
+	<% Post.all.each do |post| %>
+		<article>
+			<h2>
+				<%= post.title %>
+			</h2>
+			<p>
+				<%= post.content %>
+			</p>
+		</article>
+	<% end %>
 <% end %>
