--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,9 @@
 <h1 class="blue classy" style="font-size: 5em; text-align: center">The Wall</h1>
 <p style="text-align: center">Check out your guildie's latest posts!</p>
-<% if logged_in?  %>
-	<%= link_to "New Post!", posts_path, class: 'pure-button' %>
-<% end %>
 <hr>
-
+<% if logged_in?  %>
+	<%= link_to "New Post!", posts_path, class: 'pure-button', style: 'float: right;margin-top: 1em;margin-right: 1em;' %>
+<% end %>
 <% if Post.all.empty? %>
 	<article>
 	  <h2 style="text-align: center" class="blue pwn-font">Hm, nothing here</h2>
