Add sign in box-shadow

--- a/app/assets/stylesheets/global/header.scss
+++ b/app/assets/stylesheets/global/header.scss
@@ -30,6 +30,7 @@
 	height: 20em;
 	border-radius: 1em;
 	border: 0.125em solid #195584;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 
 	h2 {
 		color: #195584;
