--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
-<h1 class="blue classy" style="font-size: 5em; text-align: center">The Wall</h1>
-<p style="text-align: center">Check out your guildie's latest posts!</p>
+<h1 class="blue classy wall-header">The Wall</h1>
+<p class="home-header">Check out your guildie's latest posts!</p>
 <hr>
 <% if logged_in?  %>
 	<%= link_to "New Post!", posts_path, class: 'pure-button', style: 'float: right;margin-top: 1em;margin-right: 1em;' %>
