--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -7,3 +7,20 @@ p.home-header {
 	margin: 0;
 	padding: 0.15em 3.25em;
 }
+
+.blog-post {
+	padding: 1em;
+}
+
+.blog-title {
+	font-size: 2.5em;
+	line-height: 0.5em;
+
+	.not-fancy {
+		margin-left: 3.5em;
+		font-family: initial;
+		font-size: 0.25em;
+		font-style: italic;
+		color: #484848;
+	}
+}
