Refactor CSS for buttons

--- a/app/assets/stylesheets/global/global.scss
+++ b/app/assets/stylesheets/global/global.scss
@@ -37,6 +37,11 @@ body {
     font-family: "Acme", sans-serif;
 }
 
+.pwn-button {
+    background-color: #195584;
+    color: white;
+}
+
 h1 {
     font-size: 2.25em;
     margin: 0.25em 0;
