Apply new Class to buttons

--- a/app/views/global/_header.html.erb
+++ b/app/views/global/_header.html.erb
@@ -56,8 +56,8 @@
 		<div class="sign-in-container" style="display:none;">
 			<% if logged_in? %>
 				<h2 class="pwn-font">My Account</h2>
-				<%= link_to "Change Password", password_path, class: 'pure-button' %><br>
-				<%= link_to "Log Out", logout_path, method: :delete, class: 'pure-button' %>
+				<%= link_to "Change Password", password_path, class: 'pure-button pwn-button' %><br>
+				<%= link_to "Log Out", logout_path, method: :delete, class: 'pure-button pwn-button' %>
 			<% else %>
 				<h2 class="pwn-font">Login</h2>
 				<%= form_tag("/login", method: :post, class: "pure-form pure-form-stacked") do %>
