Update SUBMIT button

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,5 +3,5 @@
 	Content:
 	<%= f.text_area :content %>
 	Guild Only: <%= f.check_box(:guild_only) %>
-	<%= f.submit "SUBMIT!" %>
+	<%= f.submit "SUBMIT!", class: 'pure-button pwn-button' %>
 <% end %>
