Apply TinyMCE to post

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,15 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <!--[if lte IE 8]>
-	<link rel="stylesheet" href="<%= root_url %>css/grids-responsive-old-ie-min.css">
-	<![endif]-->
+  	 <link rel="stylesheet" href="<%= root_url %>css/grids-responsive-old-ie-min.css">
+  	<![endif]-->
     <!--[if gt IE 8]><!-->
-	<link rel="stylesheet" href="<%= root_url %>css/grids-responsive-min.css">
+    	<link rel="stylesheet" href="<%= root_url %>css/grids-responsive-min.css">
     <!--<![endif]-->
     
     <link href="https://fonts.googleapis.com/css?family=Acme|Tangerine:700" rel="stylesheet">
-    
+    <script src="<%= root_url %>tinymce/tinymce.min.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
