--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -18,3 +18,8 @@ span.post__new-title--label {
 	margin: 0.25em auto;
 	background-color: rgba(255,255,255,0.2);
 }
+
+.editor-container {
+	margin: 0 auto;
+	width: 95%;
+}
