Style the submit button

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -11,5 +11,7 @@
 			<%= f.text_area :content %>
 		</div>
 	</fieldset>
-	<%= f.submit "SUBMIT!", class: 'pure-button pwn-button' %>
+	<div class="post__submit">
+		<%= f.submit "SUBMIT!", class: 'pure-button pwn-button' %>
+	</div>
 <% end %>
