--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -19,6 +19,11 @@ span.post__new-title--label {
 	background-color: rgba(255,255,255,0.2);
 }
 
+.post__submit {
+	text-align: center;
+	margin-top: 1em;
+}
+
 .editor-container {
 	margin: 0 auto;
 	width: 95%;
