--- a/app/views/global/_header.html.erb
+++ b/app/views/global/_header.html.erb
@@ -1,6 +1,6 @@
 <% header_links = [] %>
 
-<% header_links << ["Home", "#"] %>
+<% header_links << ["Home", root_path] %>
 <% header_links << ["About", "#"] %>
 <% header_links << ["Members", "#"] %>
 <% header_links << ["Events/LFG", "#"] %>
