Update the \' New Post \' Button

--- a/app/assets/stylesheets/global/global.scss
+++ b/app/assets/stylesheets/global/global.scss
@@ -49,6 +49,7 @@ h1 {
 
 .display-left-container {
     background-color: rgba(167, 148, 121, 0.8);
+    position: relative;
 
     h1, p {
 	padding: 0.15em 1em;
