--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,9 @@
 <p class="home-header">Check out your guildie's latest posts!</p>
 <hr>
 <% if logged_in?  %>
-	<%= link_to "New Post!", posts_path, class: 'pure-button pwn-button', style: 'float: right;margin-top: 1em;margin-right: 1em;' %>
+	<%= link_to(posts_path, class: 'pure-button pwn-button home__new-post') do %>
+		<i class="fa fa-pencil"></i> Write a new post 
+	<% end %>
 <% end %>
 <% if Post.all.empty? %>
 	<article>
