Style the home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,4 @@
-<h1 class="blue classy wall-header">The Wall</h1>
-<p class="home-header">Check out your guildie's latest posts!</p>
+<h1 class="blue classy wall-header">The Wall<br><span class="not-fancy">What're you up to?</span></h1>
 <hr>
 <% if logged_in?  %>
 	<%= link_to(posts_path, class: 'pure-button pwn-button home__new-post') do %>
