--- a/app/assets/stylesheets/global/header.scss
+++ b/app/assets/stylesheets/global/header.scss
@@ -31,6 +31,7 @@
 	border-radius: 1em;
 	border: 0.125em solid #195584;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
 
 	h2 {
 		color: #195584;
