--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,6 +1,8 @@
 .wall-header {
+	padding-top: 2em;
 	font-size: 3.5em;
-	margin: 0;
+	margin: 0.75em 0em;
+	line-height: 0.25em;
 }
 
 p.home-header {
@@ -15,15 +17,16 @@ p.home-header {
 .blog-title {
 	font-size: 2.5em;
 	line-height: 0.5em;
-
-	.not-fancy {
-		margin-left: 3.5em;
-		font-family: initial;
-		font-size: 0.25em;
-		font-style: italic;
-		color: #484848;
-	}
 }
+
+.not-fancy {
+	margin-left: 3.5em;
+	font-family: initial;
+	font-size: 0.25em;
+	font-style: italic;
+	color: #484848;
+}
+
 
 .home__new-post {
 	position: absolute;
