Add Global Blog-post scss

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2,6 +2,7 @@
 @import "global/header.scss";
 @import "global/announcements.scss";
 @import "global/aside.scss";
+@import "global/blog-post.scss";
 
 @import "home.scss";
 @import "posts.scss";
