--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
 				</span>
 			</h2>
 			<p class="blog-content">
-				<%= post.content %>
+				<%= raw post.content %>
 			</p>
 		</article>
 		<hr>
