Style Login button

--- a/app/views/global/_header.html.erb
+++ b/app/views/global/_header.html.erb
@@ -65,7 +65,7 @@
 					<%= text_field_tag('username') %>
 					<%= label_tag('password', "Password", class: 'pwn-font') %>
 					<%= password_field_tag('password') %>
-					<%= submit_tag("Login", class: "pure-button") %>
+					<%= submit_tag("Login", class: "pure-button pwn-button") %>
 				<% end %>
 			<% end %>
 		</div>
