Format Pass Reset form

--- a/app/views/users/password_form.html.erb
+++ b/app/views/users/password_form.html.erb
@@ -1,21 +1,22 @@
-<%= form_tag("#{password_path}/#{@this_user.id}", method: :patch, class: "pure-form pure-form-aligned") do%>
-  <fieldset>
-    <legend>Please Enter your new password.</legend>
-    <div class="pure-control-group">
-      <%= label_tag :old_password, "Old Password" %>
-      <%= password_field_tag(:old_password) %>
-    </div>    
-    <div class="pure-control-group">
-      <%= label_tag :password, "New Password" %>
-      <%= password_field_tag(:password) %>
-    </div>
-    <div class="pure-control-group">
-      <%= label_tag :password_confirmation, "Confirm New Password" %>
-      <%= password_field_tag(:password_confirmation) %>
-    </div>
-    <div class="pure-control-group">
-      <%= submit_tag("Submit!") %>
-    </div>
-  </fieldset>
-<% end %>
-
+<div class="user-registration-form">
+  <%= form_tag("#{password_path}/#{@this_user.id}", method: :patch, class: "pure-form pure-form-stacked") do%>
+    <fieldset>
+      <legend>Please Enter your new password.</legend>
+      <div class="pure-control-group">
+        <%= label_tag :old_password, "Old Password", class: 'pwn-font blue' %>
+        <%= password_field_tag(:old_password) %>
+      </div>    
+      <div class="pure-control-group">
+        <%= label_tag :password, "New Password", class: 'pwn-font blue' %>
+        <%= password_field_tag(:password) %>
+      </div>
+      <div class="pure-control-group">
+        <%= label_tag :password_confirmation, "Confirm New Password", class: 'pwn-font blue' %>
+        <%= password_field_tag(:password_confirmation) %>
+      </div><br>
+      <div class="pure-control-group">
+        <%= submit_tag("Submit!", class: 'pure-button pwn-button') %>
+      </div>
+    </fieldset>
+  <% end %>
+</div>
