--- a/app/views/global/_announcements.html.erb
+++ b/app/views/global/_announcements.html.erb
@@ -1,5 +1,5 @@
 <section class="announcement__container">
   <div class="center">
-    <h2 class="blue pwn-font"><span class="classy">Latest Announcements:</span> <%= link_to "Nothing to see here", "javascript:alert(\"no, seriously\");" %></h2>
+    <h2 class="blue pwn-font"><span class="classy">Latest Announcements:</span> <%= link_to obj.title, announcement_path(obj) %></h2>
   </div>
 </section>
