Add social media buttons and show page

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -28,3 +28,8 @@ span.post__new-title--label {
 	margin: 0 auto;
 	width: 95%;
 }
+
+.share-social-media {
+	min-height: 2em;
+	margin-right: 2.5em;
+}
