Create apply page

--- a/app/views/global/_header.html.erb
+++ b/app/views/global/_header.html.erb
@@ -3,7 +3,7 @@
 <% header_links << ["Home", root_path] %>
 <% header_links << ["About", "#"] %>
 <% header_links << ["Events/LFG", "#"] %>
-<% header_links << ["Apply", "#"] %>
+<% header_links << ["Apply", apply_path] %>
 
 <header>
   <section class="header__container">
