--- a/app/views/pages/apply.html.erb
+++ b/app/views/pages/apply.html.erb
@@ -1,24 +1,24 @@
 <h1 class="blue classy wall-header">Apply to the guild!<br><br><span class="not-fancy">Fill out the fields below!</span></h1>
 <hr>
-<%= form_tag("/apply", method: :post) do %>
+<%= form_tag("/apply", method: :post, class: "pure-form pure-form-stacked") do %>
 	<div class="pure-g">
-		<div class="pure-u-1">
+		<div class="pure-u-1 apply__contact">
 			<div class="pure-g">
 				<div class="pure-u-1 pure-u-md-1-2">
-					<%= label_tag(:discord_name, "Discord Username", class: "pwn-font blue") %><br>
+					<%= label_tag(:discord_name, "Discord Username", class: "pwn-font blue") %>
 					<%= text_field_tag(:discord_name, "", placeholder: "Discord#123") %>
 				</div>
 				<div class="pure-u-1 pure-u-md-1-2">
-					<%= label_tag(:gw_name, "GuildWars Username", class: "pwn-font blue") %><br>
+					<%= label_tag(:gw_name, "GuildWars Username", class: "pwn-font blue") %>
 					<%= text_field_tag(:gw_name, "", placeholder: "GuildWars.123") %>
 				</div>
 			</div>
 		</div>
-		<div class="pure-u-1">
-			<%= label_tag(:note, "Introduce Yourself:", class: "pwn-font blue") %><br>
-			<%= text_area_tag(:note, "", placeholder: "Tell us about yourself") %><br>
+		<div class="pure-u-1 apply__note">
+			<%= label_tag(:note, "Introduce Yourself:", class: "pwn-font blue") %>
+			<%= text_area_tag(:note, "", placeholder: "Tell us about yourself") %>
 		</div>
-		<div class="pure-u-1">
+		<div class="pure-u-1 apply__submit">
 			<%= submit_tag("Submit", class: "pure-button pwn-button") %>
 		</div>
 	</div>
